<resources>
    <string name="app_name">Shoe Inventory</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_name">shoe name</string>
    <string name="shoe_size">Shoe Size</string>
    <string name="description">description</string>
    <string name="done">DONE</string>
    <string name="adding_new_shoe">adding new shoe</string>
    <string name="shoe_company">shoe Company</string>
    <string name="add">Add</string>
    <string name="welcome_back">Welcome to our App</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="login">login</string>
    <string name="login_as_a_guest">Login As a guest</string>
    <string name="welcome">Welcome!!</string>
    <string name="we_hope_our_shoe_inventory_meets_your_wishes">We hope our shoe Inventory meets your wishes</string>
    <string name="put_the_details_for_every_shoes_mandatory">put the details for every shoes mandatory</string>
    <string name="next">Next</string>
</resources>